fixed heading ui + removed overflow

--- a/src/app/coins/coins.component.scss
+++ b/src/app/coins/coins.component.scss
@@ -1,23 +1,25 @@
-.banner {
-    background: #4C4360;
-    width: 100%;
+* {
+   
 }
 
 .header {
-    height: 40%;
+    background: var(--rasin-black);
+    width: 100%;
+    height: 150px;
     display: flex;
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    color: #fff;
+    color: var(--ghost-white);
+    margin-bottom: 40px;
 
     h2 {
         font-weight: bold;
-        font-size: 2.5rem;
+        font-size: 2.7rem;
     }
 
     h6 {
-        font-size: 0.8rem;
+        font-size: 1rem;
         font-weight: 500;
     }
 }
