--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ $cryptocurrency-theme: mat.define-dark-theme((
 :root {
   --rasin-black: #212121;
   --quick-silver: #A6A6A8;
-  --ghost-white: #E8E9F3;
+  --ghost-white: #FFF;
   --grape-purple: #6554C0;
   --blizzard-blue: #41C7E4;
 }
@@ -51,4 +51,5 @@ body {
   margin: 0; 
   font-family: poppins, sans-serif; 
   background: var(--rasin-black);
+  overflow: hidden;
 }
